--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Victor+Mono&family=Yanone+Kaffeesatz:wght@300;400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Permanent+Marker&family=Victor+Mono&display=swap"
       rel="stylesheet"
     />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
